infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-container
          # image: us.gcr.io/ticketing-dev-497014/auth
          image: rbsuraj1/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  type: ClusterIP # default value, so we can remove this line
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
